#13 - Fix-layout-v0.1 + Logic Search + Scrollbar in Phonebook.

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     flex: 1;
+    margin-right: 2px;
     position: relative;
 }
 
@@ -34,9 +35,7 @@
     flex: 1;
     padding: 6px;
     padding-left: 26px;
-
     border-radius: 8px;
-
     font-size: 1.2rem;
     font-weight: 400;
     border: 1px solid var(--grey-400);
